# DiceySquad

./: Cargo.toml  README.md
.github/workflows/: workflows.yml
data/: data.sql
src/: main.rs
template/: sample.html  style.css
