[package]
name = "DiceyCam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
anyhow = "1"
#rusqlite = { version = "0.28.0", features = ["bundled"] }
sqlx = { version = "0.6", features = ["sqlite", "mysql", "runtime-tokio-native-tls", "macros"]}

